2007-04-25  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp (*root-map*): new "A" binding
	("title"): new command

	* primitives.lisp (window): rename name slot to title. all callers
	updated.

	* core.lisp (window-name): new function

	* user.lisp ("reload"): use restarts-menu
	(select-from-menu): make prompt optional. display prompt in menu.
	(restarts-menu): new function
	(with-restarts-menu): new macro
	(with-restarts-menu): use handler-bind, not handler-case
	(restarts-menu): remove newlines from restarts, errors

	* core.lisp (handle-event): add a top-level restart

	* stumpwm.lisp (*timer-list*): new global
	(timer): new defstruct
	(timer-p): new function
	(run-with-timer): likewise
	(cancel-timer): likewise
	(schedule-timer): likewise
	(sort-timers): likewise
	(run-expired-timers): likewise
	(get-next-timeout): likewise
	(stumpwm-internal-loop): handle timers

	* primitives.lisp (*timeout*): remove global
	(reset-timeout): remove function
	(reset-timeout-for-frame-indicator): remove function
	(*frame-indicator-timer*): new global
	(*message-window-timer*): likewise

	* mode-line.lisp (*mode-line-timeout*): new global
	(*mode-line-timer*): likewise
	(update-screen-mode-lines): new function
	(turn-on-mode-line-timer): likewise
	(maybe-cancel-mode-line-timer): likewise
	(toggle-mode-line): call maybe-cancel-mode-line-timer and turn-on-mode-line-timer

	* core.lisp (reset-message-window-timer): new function
	(reset-frame-indicator-timer): likewise
	(show-frame-indicator): call reset-frame-indicator-timer
	(echo-string-list): call reset-message-window-timer

2007-04-23  Shawn Betts  <sabetts@vcn.bc.ca>

	* mode-line.lisp (toggle-mode-line): use :bottom not 'bottom in expand-tree calls

	* core.lisp (split-frame-h): properly handle modulo
	(split-frame-v): likewise
	(expand-tree): properly expand the children with modulo
	(join-subtrees): rewrite
	(offset-frames): new function
	(balance-frames): properly resize with modulo
	(expand-tree): resize proportionally
