@@ -5,6 +5,9 @@ This file documents user visible changes between versions of StumpWM
 * Changes since 0.0.6
 These changes are probably incomplete
 
+** New command, title, bound to C-t A
+title sets the window's name.
+
 ** errors while reloading stumpwm 
 A restarts menu now appears that allows you to select a restart, if
 you want.
